fix: Remove deprecated MaxPermSize Java option for JDK17